# personal-agent-mx81j0

./: .editorconfig  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  Makefile  README.md  SECURITY.md
.github/: dependabot.yml  (+1 more)
src/backend/: .env.example  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  setup.py
src/backend/api/: __init__.py  server.py
src/backend/api/middleware/: __init__.py  authentication.py  error_handler.py  logging.py  rate_limiter.py
src/backend/api/routes/: __init__.py  conversation.py  document.py  memory.py  search.py  settings.py  voice.py  web.py
src/backend/config/: __init__.py  default_config.yaml  logging.py  settings.py
src/backend/database/: __init__.py  models.py  sqlite_db.py  vector_db.py
src/backend/docs/: README.md  api.md  architecture.md  deployment.md  development.md
src/backend/integrations/: __init__.py  cloud_storage.py  duckduckgo_client.py  elevenlabs_client.py  openai_client.py  serpapi_client.py
src/backend/llm/: __init__.py  context_manager.py  prompt_templates.py
src/backend/memory/: __init__.py  metadata_store.py  retriever.py  storage.py  vector_store.py
src/backend/schemas/: __init__.py  conversation.py  document.py  memory.py  search.py  settings.py  voice.py  web.py
src/backend/scripts/: __init__.py  backup_manager.py  generate_test_data.py  initialize_db.py  optimize_vector_db.py
src/backend/services/: __init__.py  conversation_service.py  document_processor.py  llm_service.py  memory_service.py  search_service.py  storage_manager.py  voice_processor.py  web_extractor.py
src/backend/tests/: __init__.py  conftest.py
src/backend/utils/: __init__.py  document_parsers.py  embeddings.py  encryption.py  event_bus.py  logging_setup.py  text_processing.py  validators.py  web_scraper.py
(+254 files in other folders)
